Adding Workitems from the worklog viewer

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -1,4 +1,4 @@
-release.version=2.9.9
+release.version=3.0.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -115,3 +115,7 @@ grouping.workauthor=Work author
 grouping.worktype=Work type
 grouping.project=Project
 exceptions.notsetyet={0} is not ready yet. Please verify, that the settings dialog has been filled out correctly.
+contextmenu.issue.openinyoutrack=Show {0} in browser window
+contextmenu.issue.addworkitem=Add work item to {0}
+contextmenu.issue.addanyworkitem=Add work item to other issue
+dialog.addworkitem.title=Add new work item
