--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -103,5 +103,9 @@ grouping.worktype=Typ der Zeitbuchung
 grouping.workauthor=Zeitbuchende Person
 timerange.custom.startrequired=Startdatum ist erforderlich
 timerange.custom.endrequired=Enddatum ist erforderlich
-exceptions.notsetyet={0} ist noch nicht bereit. Bitte sicherstellen, dass der Einstellungen Dialog korrekt ausgefüllt ist.
+exceptions.notsetyet={0} ist noch nicht bereit. Bitte sicherstellen, dass der Einstellungen Dialog korrekt ausgef\u00FCllt ist.
+contextmenu.issue.openinyoutrack={0} im Browser \u00F6ffnen
+contextmenu.issue.addworkitem=Zeitbuchung f\u00FCr {0} anlegen
+contextmenu.issue.addanyworkitem=Zeitbuchung für anderes Ticket anlegen
+dialog.addworkitem.title=Zeitbuchung anlegen
 
