--- a/connectors/connector-2018.2/src/main/resources/i18n/connector-2018.properties
+++ b/connectors/connector-2018.2/src/main/resources/i18n/connector-2018.properties
@@ -1,3 +1,4 @@
 fetchingissues=Fetching issues
 fetchingworklogs=Fetching worklog items for {0} issues
 done=Done
+addworkitem.post.error=Error creating new work item: {0}
