--- a/connectors/connector-2018.2/src/main/resources/i18n/connector-2018_de.properties
+++ b/connectors/connector-2018.2/src/main/resources/i18n/connector-2018_de.properties
@@ -1,3 +1,4 @@
 fetchingissues=Lade Issues
 fetchingworklogs=Lade Zeitbuchungen f\u00FCr {0} Issues
 done=Fertig
+addworkitem.post.error=Fehler beim Erstellen der Zeitbuchung: {0}
