--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
@@ -2,6 +2,8 @@ converting.issues=Verarbeite Ticket {0}
 done=Fertig
 fetching.workitems=Lade Zeitbuchungen für Zeitraum {0}
 fetching.workitems.error=Fehler beim Laden der Zeitbuchungen: {0}
+addworkitem.getme.error=Fehler beim Anlegen der Zeitbuchung: Konnte Id des eigenen Benutzers nicht laden: {0}
 issue.nosummary=-- keine Ticket Beschreibung --
 user.unknown.displayname=-- unbekannter Benutzer --
 user.unknown.username=-- unbekannter Benutzer --
+addworkitem.post.error=Fehler beim Erstellen der Zeitbuchung: {0}
