--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019.properties
@@ -2,6 +2,8 @@ converting.issues=Processing issue {0}
 done=Done
 fetching.workitems=Fetching work items for time span {0}
 fetching.workitems.error=Error while fetching Work Items: {0}
+addworkitem.getme.error=Error trying to create workitem: Could not load required id for own user: {0}
 issue.nosummary=-- no issue summary --
 user.unknown.displayname=-- unknown user --
 user.unknown.username=-- unknown user --
+addworkitem.post.error=Error creating new work item: {0}
