Continueing with the add workt item menu

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -119,3 +119,10 @@ contextmenu.issue.openinyoutrack=Show {0} in browser window
 contextmenu.issue.addworkitem=Add work item to {0}
 contextmenu.issue.addanyworkitem=Add work item to other issue
 dialog.addworkitem.title=Add new work item
+dialog.addworkitem.issue=Issue
+dialog.addworkitem.date=Work date
+dialog.addworkitem.time=Duration
+dialog.addworkitem.description=Description (optional)
+task.addworkitem.title=Adding new work item
+task.addworkitem.done=Done
+task.addworkitem.creating=Creating new work item
