--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -108,4 +108,11 @@ contextmenu.issue.openinyoutrack={0} im Browser \u00F6ffnen
 contextmenu.issue.addworkitem=Zeitbuchung f\u00FCr {0} anlegen
 contextmenu.issue.addanyworkitem=Zeitbuchung für anderes Ticket anlegen
 dialog.addworkitem.title=Zeitbuchung anlegen
+dialog.addworkitem.issue=Ticket
+dialog.addworkitem.date=Datum
+dialog.addworkitem.time=Dauer
+dialog.addworkitem.description=Beschreibung (optional)
+task.addworkitem.title=Zeitbuchung erstellen
+task.addworkitem.done=Fertig
+task.addworkitem.creating=Erstelle neue Zeitbuchung
 
