Workaround for adding work items to issues, that have not been present in the original time report

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -126,3 +126,4 @@ dialog.addworkitem.description=Description (optional)
 task.addworkitem.title=Adding new work item
 task.addworkitem.done=Done
 task.addworkitem.creating=Creating new work item
+task.addworkitem.missingissuedescription=« Issue Details not available yet. Reload report to update »
