--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -115,4 +115,5 @@ dialog.addworkitem.description=Beschreibung (optional)
 task.addworkitem.title=Zeitbuchung erstellen
 task.addworkitem.done=Fertig
 task.addworkitem.creating=Erstelle neue Zeitbuchung
+task.addworkitem.missingissuedescription=<< Ticket Details nicht verf\u00FCgbar. Report neu Laden zum Aktualisieren >>
 
