--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -20,7 +20,6 @@ view.settings.save=Speichern
 view.settings.youtrackurl=YouTrack-URL
 view.settings.youtrackuser=Benutzername
 view.settings.workhours=Arbeitsstunden pro Tag
-
 view.settings.showStatistics=Zeige Statistik Spalte
 view.settings.autoload=Letzten Report-Zeitraum beim Start laden
 view.settings.showall=Alle Worklogs zeigen
@@ -34,11 +33,8 @@ timerange.thismonth=Dieser Monat
 timerange.lastmonth=Letzter Monat
 timerange.custom=Freie Auswahl
 date.column.format=ccc dd.MM.
-
 worker.progress.done=Fertig
-
 worker.excel.exporting=Erstelle Excel Spreadsheet
-exceptions.view.io=Konnte View {0} nicht laden
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
 exceptions.main.worker.unknown=Unbekannter Fehler, bitte Log-Meldungen pr\u00FCfen
 exceptions.main.worker.nullstatus=Konnte leere StatusLine nicht auswerten
@@ -49,7 +45,6 @@ exceptions.settings.password.decrypt=Konnte YouTrack Passwort nicht entschl\u00F
 exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschl\u00FCsseln
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
 exceptions.excel.success=Erfolgreich gespeichert nach {0}
-exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github Seite an.
 grouping.none=- Kein Gruppierungswert -
 view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
@@ -60,7 +55,6 @@ view.settings.general=Allgemein
 view.settings.authentication=Anmeldung
 view.settings.authentication.help=Was muss ich hier eintragen?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
-worker.progress.categories=Hole Kategorien
 view.settings.workdays=Arbeitstage
 view.settings.workdays.collapse=Zusammenklappen
 view.settings.workdays.highlight=Hervorheben
@@ -79,7 +73,6 @@ exceptions.settings.permanenttoken.decrypt=Konnte YouTrack Pers\u00F6nlichen Per
 view.settings.youtrackversion=YouTrack Version
 view.settings.allfields=Bitte f\u00FCllen Sie alle Felder aus
 task.fetchworklogs=Hole Zeitbuchungen
-task.groupby=Hole Gruppierungs Parameter
 task.state.ready=Bereit
 task.state.scheduled=Eingeplant
 task.state.running=L\u00E4uft
@@ -88,10 +81,6 @@ task.state.cancelled=Abgebrochen
 task.state.failed=Fehlgeschlagen
 theme.light.label=Hell
 theme.dark.label=Dunkel
-connector.v20182.worklogfield.label=YouTrack "Arbeitsdatum" Feld Name
-connector.v20182.worklogfield.hint=H\u00E4ngt ab von der YouTrack Sprache.\n\nBei Deutsch: "Arbeitsdatum".\n\n\
-Muss durch Ausprobieren in der Ticketsuche in YouTrack ermittelt werden.
-connector.v20182.worklogfield.help=Klicke hier f\u00FCr weitere Infos
 view.settings.enablePlugins=Plugins aktivieren
 plugins.nonefound=Keine Plugins gefunden
 view.logs.savefile=Log Datei speichern
@@ -115,5 +104,5 @@ dialog.addworkitem.description=Beschreibung (optional)
 task.addworkitem.title=Zeitbuchung erstellen
 task.addworkitem.done=Fertig
 task.addworkitem.creating=Erstelle neue Zeitbuchung
-task.addworkitem.missingissuedescription=<< Ticket Details nicht verf\u00FCgbar. Report neu Laden zum Aktualisieren >>
+task.addworkitem.missingissuedescription=« Ticket Details nicht verf\u00FCgbar. Report neu Laden zum Aktualisieren »
 
