Let user defined Keyboard Shortcut for fetching work logs

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -111,3 +111,6 @@ task.addworkitem.title=Adding new work item
 task.addworkitem.done=Done
 task.addworkitem.creating=Creating new work item
 task.addworkitem.missingissuedescription=« Issue Details not available yet. Reload report to update »
+view.settings.shortkey=Keyboard Shortcut
+view.settings.shortkey.define=Change Shortcut
+view.settings.shortkey.cancelhint=Press your keyboard shortcut now. Cancel with ESC
