--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -105,4 +105,7 @@ task.addworkitem.title=Zeitbuchung erstellen
 task.addworkitem.done=Fertig
 task.addworkitem.creating=Erstelle neue Zeitbuchung
 task.addworkitem.missingissuedescription=« Ticket Details nicht verf\u00FCgbar. Report neu Laden zum Aktualisieren »
+view.settings.shortkey=Tastenkürzel
+view.settings.shortkey.define=\u00C4ndern
+view.settings.shortkey.cancelhint=Jetzt Tastenkombination drücken. ESC zum Abbrechen
 
