Keyboard shortcuts section

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -111,6 +111,10 @@ task.addworkitem.title=Adding new work item
 task.addworkitem.done=Done
 task.addworkitem.creating=Creating new work item
 task.addworkitem.missingissuedescription=« Issue Details not available yet. Reload report to update »
-view.settings.shortkey=Keyboard Shortcut
+view.settings.shortkey=Keyboard Shortcuts
 view.settings.shortkey.define=Change Shortcut
 view.settings.shortkey.cancelhint=Press your keyboard shortcut now. Cancel with ESC
+view.settings.shortkey.fetchworklogs=Download work logs
+view.settings.shortkey.togglestatistics=Toggle statistics bar
+view.settings.shortkey.exit=Exit Worklog Viewer
+view.settings.shortkey.showsettings=Show settings
