--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -95,7 +95,7 @@ timerange.custom.endrequired=Enddatum ist erforderlich
 exceptions.notsetyet={0} ist noch nicht bereit. Bitte sicherstellen, dass der Einstellungen Dialog korrekt ausgef\u00FCllt ist.
 contextmenu.issue.openinyoutrack={0} im Browser \u00F6ffnen
 contextmenu.issue.addworkitem=Zeitbuchung f\u00FCr {0} anlegen
-contextmenu.issue.addanyworkitem=Zeitbuchung für anderes Ticket anlegen
+contextmenu.issue.addanyworkitem=Zeitbuchung f\u00FCr anderes Ticket anlegen
 dialog.addworkitem.title=Zeitbuchung anlegen
 dialog.addworkitem.issue=Ticket
 dialog.addworkitem.date=Datum
@@ -105,7 +105,11 @@ task.addworkitem.title=Zeitbuchung erstellen
 task.addworkitem.done=Fertig
 task.addworkitem.creating=Erstelle neue Zeitbuchung
 task.addworkitem.missingissuedescription=« Ticket Details nicht verf\u00FCgbar. Report neu Laden zum Aktualisieren »
-view.settings.shortkey=Tastenkürzel
+view.settings.shortkey=Tastenk\u00FCrzel
 view.settings.shortkey.define=\u00C4ndern
-view.settings.shortkey.cancelhint=Jetzt Tastenkombination drücken. ESC zum Abbrechen
+view.settings.shortkey.cancelhint=Jetzt Tastenkombination dr\u00FCcken. ESC zum Abbrechen
+view.settings.shortkey.fetchworklogs=Zeitbuchungen laden
+view.settings.shortkey.togglestatistics=Statistiken ein-/ausblenden
+view.settings.shortkey.exit=Worklog Viewer beenden
+view.settings.shortkey.showsettings=Einstellungen öffnen
 
