Shortcut for adding work items

--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -111,5 +111,6 @@ view.settings.shortkey.cancelhint=Jetzt Tastenkombination dr\u00FCcken. ESC zum 
 view.settings.shortkey.fetchworklogs=Zeitbuchungen laden
 view.settings.shortkey.togglestatistics=Statistiken ein-/ausblenden
 view.settings.shortkey.exit=Worklog Viewer beenden
-view.settings.shortkey.showsettings=Einstellungen öffnen
+view.settings.shortkey.showsettings=Einstellungen \u00F6ffnen
+view.settings.shortkey.addworkitem=Zeitbuchung anlegen
 
