--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -118,3 +118,4 @@ view.settings.shortkey.fetchworklogs=Download work logs
 view.settings.shortkey.togglestatistics=Toggle statistics bar
 view.settings.shortkey.exit=Exit Worklog Viewer
 view.settings.shortkey.showsettings=Show settings
+view.settings.shortkey.addworkitem=Add new work item
