Searching for issues

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -119,3 +119,8 @@ view.settings.shortkey.togglestatistics=Toggle statistics bar
 view.settings.shortkey.exit=Exit Worklog Viewer
 view.settings.shortkey.showsettings=Show settings
 view.settings.shortkey.addworkitem=Add new work item
+view.addworkitem.issue.resolution=Resolved on
+dialog.issuesearch.title=Issue Search
+dialog.issuesearch.noselection=No Issue selected
+dialog.issuesearch.groups.searchresult=Search Results
+dialog.issuesearch.groups.favourites=Favourites
