--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -113,4 +113,9 @@ view.settings.shortkey.togglestatistics=Statistiken ein-/ausblenden
 view.settings.shortkey.exit=Worklog Viewer beenden
 view.settings.shortkey.showsettings=Einstellungen \u00F6ffnen
 view.settings.shortkey.addworkitem=Zeitbuchung anlegen
+view.addworkitem.issue.resolution=L\u00F6sungsdatum
+dialog.issuesearch.title=Ticketsuche
+dialog.issuesearch.noselection=Kein Ticket ausgew\u00E4hlt
+dialog.issuesearch.groups.searchresult=Suchergebnisse
+dialog.issuesearch.groups.favourites=Favoriten
 
