--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
@@ -7,3 +7,5 @@ issue.nosummary=-- keine Ticket Beschreibung --
 user.unknown.displayname=-- unbekannter Benutzer --
 user.unknown.username=-- unbekannter Benutzer --
 addworkitem.post.error=Fehler beim Erstellen der Zeitbuchung: {0}
+searching.issues=Suche nach Tickets mit Query {0}
+searching.workitems=Lade Zeitbuchungen für {0} Tickets
