--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -123,4 +123,5 @@ view.addworkitem.issue.resolution=Resolved on
 dialog.issuesearch.title=Issue Search
 dialog.issuesearch.noselection=No Issue selected
 dialog.issuesearch.groups.searchresult=Search Results
-dialog.issuesearch.groups.favourites=Favourites
+dialog.issuesearch.groups.favourites.searches=Saved searches
+dialog.issuesearch.groups.favourites.issues=Favourites
