--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -117,5 +117,6 @@ view.addworkitem.issue.resolution=L\u00F6sungsdatum
 dialog.issuesearch.title=Ticketsuche
 dialog.issuesearch.noselection=Kein Ticket ausgew\u00E4hlt
 dialog.issuesearch.groups.searchresult=Suchergebnisse
-dialog.issuesearch.groups.favourites=Favoriten
+dialog.issuesearch.groups.favourites.searches=Gespeicherte Suchen
+dialog.issuesearch.groups.favourites.issues=Favoriten
 
