Handling of favourite Issues

--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -96,6 +96,8 @@ exceptions.notsetyet={0} ist noch nicht bereit. Bitte sicherstellen, dass der Ei
 contextmenu.issue.openinyoutrack={0} im Browser \u00F6ffnen
 contextmenu.issue.addworkitem=Zeitbuchung f\u00FCr {0} anlegen
 contextmenu.issue.addanyworkitem=Zeitbuchung f\u00FCr anderes Ticket anlegen
+contextmenu.issue.addfavourite={0} zu Favoriten hinzuf\u00FCgen
+contextmenu.issue.removefavourite={0} von Favoriten entfernen
 dialog.addworkitem.title=Zeitbuchung anlegen
 dialog.addworkitem.issue=Ticket
 dialog.addworkitem.date=Datum
@@ -115,6 +117,8 @@ view.settings.shortkey.showsettings=Einstellungen \u00F6ffnen
 view.settings.shortkey.addworkitem=Zeitbuchung anlegen
 view.addworkitem.issue.resolution=L\u00F6sungsdatum
 dialog.issuesearch.title=Ticketsuche
+dialog.issuesearch.task.title=Suche
+dialog.issuesearch.task.single.title=Lade Ticket {0}
 dialog.issuesearch.noselection=Kein Ticket ausgew\u00E4hlt
 dialog.issuesearch.groups.searchresult=Suchergebnisse
 dialog.issuesearch.groups.favourites.searches=Gespeicherte Suchen
