--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019.properties
@@ -7,5 +7,7 @@ issue.nosummary=-- no issue summary --
 user.unknown.displayname=-- unknown user --
 user.unknown.username=-- unknown user --
 addworkitem.post.error=Error creating new work item: {0}
-searching.issues=Searching for issues with query {0]
+searching.issues=Searching for issues with query {0}
+searching.issues.error=Error while searching for issues with query {0}: {1}
 searching.workitems=Loading workitems for {0} Issues
+loadissue.error=Error while loading details for Issue {0}: {1}
