--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
@@ -8,4 +8,6 @@ user.unknown.displayname=-- unbekannter Benutzer --
 user.unknown.username=-- unbekannter Benutzer --
 addworkitem.post.error=Fehler beim Erstellen der Zeitbuchung: {0}
 searching.issues=Suche nach Tickets mit Query {0}
+searching.issues.error=Fehler bei der Suche nach Tickets mit Query {0}: {1}
 searching.workitems=Lade Zeitbuchungen für {0} Tickets
+loadissue.error=Fehler beim Laden von Ticket {0}: {1}
