--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -102,6 +102,8 @@ exceptions.notsetyet={0} is not ready yet. Please verify, that the settings dial
 contextmenu.issue.openinyoutrack=Show {0} in browser window
 contextmenu.issue.addworkitem=Add work item to {0}
 contextmenu.issue.addanyworkitem=Add work item to other issue
+contextmenu.issue.addfavourite=Add {0} to favourites
+contextmenu.issue.removefavourite=Remove {0} from favourites
 dialog.addworkitem.title=Add new work item
 dialog.addworkitem.issue=Issue
 dialog.addworkitem.date=Work date
@@ -121,6 +123,8 @@ view.settings.shortkey.showsettings=Show settings
 view.settings.shortkey.addworkitem=Add new work item
 view.addworkitem.issue.resolution=Resolved on
 dialog.issuesearch.title=Issue Search
+dialog.issuesearch.task.title=Search
+dialog.issuesearch.task.single.title=Loading Issue {0}
 dialog.issuesearch.noselection=No Issue selected
 dialog.issuesearch.groups.searchresult=Search Results
 dialog.issuesearch.groups.favourites.searches=Saved searches
