integrating the issue search into the tabpane

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -122,6 +122,11 @@ view.settings.shortkey.exit=Exit Worklog Viewer
 view.settings.shortkey.showsettings=Show settings
 view.settings.shortkey.addworkitem=Add new work item
 view.addworkitem.issue.resolution=Resolved on
+search.title=Search
+search.query=Query
+search.perform=Search
+search.save=Save
+search.save.tooltip=Save the currently defined query as favorite
 dialog.issuesearch.title=Issue Search
 dialog.issuesearch.task.title=Search
 dialog.issuesearch.task.single.title=Loading Issue {0}
