--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -116,6 +116,11 @@ view.settings.shortkey.exit=Worklog Viewer beenden
 view.settings.shortkey.showsettings=Einstellungen \u00F6ffnen
 view.settings.shortkey.addworkitem=Zeitbuchung anlegen
 view.addworkitem.issue.resolution=L\u00F6sungsdatum
+search.title=Suche
+search.query=Abfrage
+search.perform=Suchen
+search.save=Speichern
+search.save.tooltip=Die aktuelle Abfrage als Favoriten speichern
 dialog.issuesearch.title=Ticketsuche
 dialog.issuesearch.task.title=Suche
 dialog.issuesearch.task.single.title=Lade Ticket {0}
