Adding favourite search

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -134,3 +134,5 @@ dialog.issuesearch.noselection=No Issue selected
 dialog.issuesearch.groups.searchresult=Search Results
 dialog.issuesearch.groups.favourites.searches=Saved searches
 dialog.issuesearch.groups.favourites.issues=Favourites
+dialog.issuesearch.groups.favourites.searches.name=Name
+dialog.issuesearch.groups.favourites.searches.edit.dialog.title=Edit saved search
