--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -128,4 +128,5 @@ dialog.issuesearch.noselection=Kein Ticket ausgew\u00E4hlt
 dialog.issuesearch.groups.searchresult=Suchergebnisse
 dialog.issuesearch.groups.favourites.searches=Gespeicherte Suchen
 dialog.issuesearch.groups.favourites.issues=Favoriten
+dialog.issuesearch.groups.favourites.searches.edit.dialog.title=Gespeicherte Suche bearbeiten
 
