Getting Version 2.6.0 ready

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -1,4 +1,4 @@
-release.version=3.0.0
+release.version=2.6.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -61,6 +61,7 @@ timerange.custom=Custom range
 timerange.custom.startrequired=Start date is required
 timerange.custom.endrequired=End date is required
 date.column.format=ccc dd.MM.
+date.column.format.long=cccc, dd.MM.yyyy
 datetime.column.format=ccc dd.MM. HH\:mm
 worker.progress.done=Done
 worker.excel.exporting=Creating Excel spreadsheet
@@ -120,7 +121,7 @@ view.settings.shortkey.fetchworklogs=Download work logs
 view.settings.shortkey.togglestatistics=Toggle statistics bar
 view.settings.shortkey.exit=Exit Worklog Viewer
 view.settings.shortkey.showsettings=Show settings
-view.settings.shortkey.addworkitem=Add new work item
+view.settings.shortkey.showissuesearch=Show search
 view.addworkitem.issue.resolution=Resolved on
 search.title=Search
 search.query=Query
@@ -136,3 +137,8 @@ dialog.issuesearch.groups.favourites.searches=Saved searches
 dialog.issuesearch.groups.favourites.issues=Favourites
 dialog.issuesearch.groups.favourites.searches.name=Name
 dialog.issuesearch.groups.favourites.searches.edit.dialog.title=Edit saved search
+dialog.issuesearch.workitems.columns.date=Date
+dialog.issuesearch.workitems.columns.author=Author
+dialog.issuesearch.workitems.columns.type=Type
+dialog.issuesearch.workitems.columns.description=Description
+dialog.issuesearch.workitems.columns.duration=Duration
