--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -33,6 +33,7 @@ timerange.thismonth=Dieser Monat
 timerange.lastmonth=Letzter Monat
 timerange.custom=Freie Auswahl
 date.column.format=ccc dd.MM.
+date.column.format.long=cccc, dd.MM.yyyy
 worker.progress.done=Fertig
 worker.excel.exporting=Erstelle Excel Spreadsheet
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
@@ -114,7 +115,7 @@ view.settings.shortkey.fetchworklogs=Zeitbuchungen laden
 view.settings.shortkey.togglestatistics=Statistiken ein-/ausblenden
 view.settings.shortkey.exit=Worklog Viewer beenden
 view.settings.shortkey.showsettings=Einstellungen \u00F6ffnen
-view.settings.shortkey.addworkitem=Zeitbuchung anlegen
+view.settings.shortkey.showissuesearch=Zeige Suche
 view.addworkitem.issue.resolution=L\u00F6sungsdatum
 search.title=Suche
 search.query=Abfrage
@@ -129,4 +130,10 @@ dialog.issuesearch.groups.searchresult=Suchergebnisse
 dialog.issuesearch.groups.favourites.searches=Gespeicherte Suchen
 dialog.issuesearch.groups.favourites.issues=Favoriten
 dialog.issuesearch.groups.favourites.searches.edit.dialog.title=Gespeicherte Suche bearbeiten
+dialog.issuesearch.workitems.columns.date=Datum
+dialog.issuesearch.workitems.columns.author=Zeitbuchende Person
+dialog.issuesearch.workitems.columns.type=Typ
+dialog.issuesearch.workitems.columns.description=Beschreibung
+dialog.issuesearch.workitems.columns.duration=Dauer
+
 
