Additional time ranges

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -55,6 +55,8 @@ view.statistics.totaltimespent=Total time spent
 view.statistics.somethingtoamountoftickets={0} ({1} Tickets)
 timerange.thisweek=This week
 timerange.lastweek=Last week
+timerange.thisandlastweek=This and last week
+timerange.lasttwoweeks=Last two weeks
 timerange.thismonth=This month
 timerange.lastmonth=Last month
 timerange.custom=Custom range
