--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -29,6 +29,8 @@ view.statistics.totaltimespent=Gesamtzeit
 view.statistics.somethingtoamountoftickets={0} ({1} Tickets)
 timerange.thisweek=Diese Woche
 timerange.lastweek=Letzte Woche
+timerange.thisandlastweek=Diese und letzte Woche
+timerange.lasttwoweeks=Vergangene beide Wochen
 timerange.thismonth=Dieser Monat
 timerange.lastmonth=Letzter Monat
 timerange.custom=Freie Auswahl
