Overtime statistics pane (https://github.com/pbauerochse/youtrack-worklog-viewer/issues/37)

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -144,3 +144,15 @@ dialog.issuesearch.workitems.columns.author=Author
 dialog.issuesearch.workitems.columns.type=Type
 dialog.issuesearch.workitems.columns.description=Description
 dialog.issuesearch.workitems.columns.duration=Duration
+statistics.overtime.title=Time-Overview
+statistics.overtime.totaldays=Total days considered
+statistics.overtime.dayswithworkentries=Days with work items
+statistics.overtime.dayswithoutworkentries=Days without work items
+statistics.overtime.daysunderfullfilled=Underfulfilled days
+statistics.overtime.daysfullfilled=Fulfilled days
+statistics.overtime.expectedbookedtime=Expected booked time
+statistics.overtime.actualbookedtime=Actual booked time
+statistics.overtime.difference=Difference
+statistics.overtime.ignore.weekends=Ignore weekends
+statistics.overtime.ignore.withoutbookedtime=Ignore days without time entries
+statistics.overtime.ignore.today=Ignore today
