--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -137,5 +137,17 @@ dialog.issuesearch.workitems.columns.author=Zeitbuchende Person
 dialog.issuesearch.workitems.columns.type=Typ
 dialog.issuesearch.workitems.columns.description=Beschreibung
 dialog.issuesearch.workitems.columns.duration=Dauer
+statistics.overtime.title=Buchungsübersicht
+statistics.overtime.totaldays=Berücksichtigte Tage
+statistics.overtime.dayswithworkentries=Tage mit Buchung
+statistics.overtime.dayswithoutworkentries=Tage ohne Buchung
+statistics.overtime.daysunderfullfilled=Tage untererfüllt
+statistics.overtime.daysfullfilled=Tage über- / erfüllt
+statistics.overtime.expectedbookedtime=Erwartete gebuchte Zeit
+statistics.overtime.actualbookedtime=Tatsächlich gebuchte Zeit
+statistics.overtime.difference=Differenz
+statistics.overtime.ignore.weekends=Wochenenden ignorieren
+statistics.overtime.ignore.withoutbookedtime=Tage ohne Buchung ignorieren
+statistics.overtime.ignore.today=Heute ignorieren
 
 
