Possibility to pass WorkType when adding WorkLogItems

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -156,3 +156,7 @@ statistics.overtime.difference=Difference
 statistics.overtime.ignore.weekends=Ignore weekends
 statistics.overtime.ignore.withoutbookedtime=Ignore days without time entries
 statistics.overtime.ignore.today=Ignore today
+dialog.addworkitem.worktype=Type (optional)
+task.addworkitem.task.workitems.title=Loading work types
+task.addworkitem.task.workitems.loading=Loading work types
+task.addworkitem.task.workitems.done=Done
