--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -149,5 +149,9 @@ statistics.overtime.difference=Differenz
 statistics.overtime.ignore.weekends=Wochenenden ignorieren
 statistics.overtime.ignore.withoutbookedtime=Tage ohne Buchung ignorieren
 statistics.overtime.ignore.today=Heute ignorieren
+dialog.addworkitem.worktype=Typ (optional)
+task.addworkitem.task.workitems.title=Lade Arbeitstypen
+task.addworkitem.task.workitems.loading=Lade Arbeitstypen
+task.addworkitem.task.workitems.done=Fertig
 
 
