--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
@@ -3,7 +3,6 @@ done=Fertig
 fetching.workitems=Lade Zeitbuchungen für Zeitraum {0}
 fetching.workitems.error=Fehler beim Laden der Zeitbuchungen: {0}
 addworkitem.getme.error=Fehler beim Anlegen der Zeitbuchung: Konnte Id des eigenen Benutzers nicht laden: {0}
-issue.nosummary=-- keine Ticket Beschreibung --
 user.unknown.displayname=-- unbekannter Benutzer --
 user.unknown.username=-- unbekannter Benutzer --
 addworkitem.post.error=Fehler beim Erstellen der Zeitbuchung: {0}
@@ -11,3 +10,4 @@ searching.issues=Suche nach Tickets mit Query {0}
 searching.issues.error=Fehler bei der Suche nach Tickets mit Query {0}: {1}
 searching.workitems=Lade Zeitbuchungen für {0} Tickets
 loadissue.error=Fehler beim Laden von Ticket {0}: {1}
+fetching.workitemtypes.error=Fehler beim Laden der Arbeitstypen: {0}
