Moving connectors into the main application

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -38,7 +38,7 @@ view.settings.cancel=Cancel
 view.settings.save=Save
 view.settings.youtrackurl=YouTrack-URL
 view.settings.youtrackuser=Username
-view.settings.youtrackversion=YouTrack Version
+view.settings.youtrack.connector=Data source
 view.settings.youtrackpermanenttoken=Personal Permanent Token
 view.settings.workhours=Work hours a day
 view.settings.theme=Theme
