--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -73,7 +73,7 @@ worker.updatecheck.checking=Suche nach neuer Version
 worker.updatecheck.available=Eine neue Version ist verf\u00FCgbar ({0})
 view.settings.youtrackpermanenttoken=Pers\u00F6nlicher Permanent Token
 exceptions.settings.permanenttoken.decrypt=Konnte YouTrack Pers\u00F6nlichen Permanent Token nicht entschl\u00FCsseln
-view.settings.youtrackversion=YouTrack Version
+view.settings.youtrack.connector=Datenquelle
 view.settings.allfields=Bitte f\u00FCllen Sie alle Felder aus
 task.fetchworklogs=Hole Zeitbuchungen
 task.state.ready=Bereit
