Showing search results in the content tab instead of the sidebar

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -133,7 +133,7 @@ search.save.tooltip=Save the currently defined query as favorite
 dialog.issuesearch.title=Issue Search
 dialog.issuesearch.task.title=Search
 dialog.issuesearch.task.single.title=Loading Issue {0}
-dialog.issuesearch.noselection=No Issue selected
+search.issue.nosearch=No search started or no search results found
 dialog.issuesearch.groups.searchresult=Search Results
 dialog.issuesearch.groups.favourites.searches=Saved searches
 dialog.issuesearch.groups.favourites.issues=Favourites
@@ -162,3 +162,6 @@ task.addworkitem.task.workitems.loading=Loading work types
 task.addworkitem.task.workitems.done=Done
 favourites.issues.loading=Loading favourite issues
 issue.workitems.loading=Loading WorkItems for Issue {0}
+search.results.term=Search for ''{0}''
+search.results.count={0} Issues found
+search.results.tab.title=Search result
