--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -127,7 +127,7 @@ search.save.tooltip=Die aktuelle Abfrage als Favoriten speichern
 dialog.issuesearch.title=Ticketsuche
 dialog.issuesearch.task.title=Suche
 dialog.issuesearch.task.single.title=Lade Ticket {0}
-dialog.issuesearch.noselection=Kein Ticket ausgew\u00E4hlt
+search.issue.nosearch=Keine Suche gestartet oder kein Suchergebnis gefunden
 dialog.issuesearch.groups.searchresult=Suchergebnisse
 dialog.issuesearch.groups.favourites.searches=Gespeicherte Suchen
 dialog.issuesearch.groups.favourites.issues=Favoriten
@@ -155,5 +155,8 @@ task.addworkitem.task.workitems.loading=Lade Arbeitstypen
 task.addworkitem.task.workitems.done=Fertig
 favourites.issues.loading=Lade Ticket Favoriten
 issue.workitems.loading=Lade Zeitbuchungen für Ticket {0}
+search.results.term=Suche nach ''{0}''
+search.results.count={0} Tickets gefunden
+search.results.tab.title=Suchergebnis
 
 
