First Grouping dependant statistic

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -165,3 +165,4 @@ issue.workitems.loading=Loading WorkItems for Issue {0}
 search.results.term=Search for ''{0}''
 search.results.count={0} Issues found
 search.results.tab.title=Search result
+statistics.grouping.label=Time grouped by {0}
