--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -158,5 +158,6 @@ issue.workitems.loading=Lade Zeitbuchungen für Ticket {0}
 search.results.term=Suche nach ''{0}''
 search.results.count={0} Tickets gefunden
 search.results.tab.title=Suchergebnis
+statistics.grouping.label=Zeit gruppiert nach {0}
 
 
