Preloading the WebView so at least the UI does not freeze while actively in use

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -166,3 +166,6 @@ search.results.term=Search for ''{0}''
 search.results.count={0} Issues found
 search.results.tab.title=Search result
 statistics.grouping.label=Time grouped by {0}
+preloader.title=Preloader
+preloader.preloading.webviews=Preloading WebView component
+preloader.preloading.webviews.done=Preloading WebView done
