--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -159,5 +159,7 @@ search.results.term=Suche nach ''{0}''
 search.results.count={0} Tickets gefunden
 search.results.tab.title=Suchergebnis
 statistics.grouping.label=Zeit gruppiert nach {0}
+preloader.preloading.webviews=Bereite WebView vor
+preloader.preloading.webviews.done=WebView vorbereitet
 
 
