Context Menu for Issue Details Tabs

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -169,3 +169,7 @@ statistics.grouping.label=Time grouped by {0}
 preloader.title=Preloader
 preloader.preloading.webviews=Preloading WebView component
 preloader.preloading.webviews.done=Preloading WebView done
+search.results.details.tab.close.left=Close all tabs left of {0}
+search.results.details.tab.close.right=Close all tabs right of {0}
+search.results.details.tab.close.all=Close all tabs
+search.results.details.tab.close.other=Close other tabs
