--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -161,5 +161,9 @@ search.results.tab.title=Suchergebnis
 statistics.grouping.label=Zeit gruppiert nach {0}
 preloader.preloading.webviews=Bereite WebView vor
 preloader.preloading.webviews.done=WebView vorbereitet
+search.results.details.tab.close.left=Alle Tabs links von {0} schließen
+search.results.details.tab.close.right=Alle Tabs rechts von {0} schließen
+search.results.details.tab.close.all=Alle Tabs schließen
+search.results.details.tab.close.other=Alle anderen Tabs schließen
 
 
