Context Menu entry for showing the Issue in the details pane

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -173,3 +173,4 @@ search.results.details.tab.close.left=Close all tabs left of {0}
 search.results.details.tab.close.right=Close all tabs right of {0}
 search.results.details.tab.close.all=Close all tabs
 search.results.details.tab.close.other=Close other tabs
+contextmenu.issue.openindetails=Open in details view
