--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -165,5 +165,6 @@ search.results.details.tab.close.left=Alle Tabs links von {0} schließen
 search.results.details.tab.close.right=Alle Tabs rechts von {0} schließen
 search.results.details.tab.close.all=Alle Tabs schließen
 search.results.details.tab.close.other=Alle anderen Tabs schließen
+contextmenu.issue.openindetails=Ticket Details anzeigen
 
 
