checkboxes to influence the details in the search results list view

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -165,6 +165,9 @@ issue.workitems.loading=Loading WorkItems for Issue {0}
 search.results.term=Search for ''{0}''
 search.results.count={0} Issues found
 search.results.tab.title=Search result
+search.results.show.tags=Show tags
+search.results.show.fields=Show fields
+search.results.show.description=Show description
 statistics.grouping.label=Time grouped by {0}
 preloader.title=Preloader
 preloader.preloading.webviews=Preloading WebView component
