--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -166,5 +166,8 @@ search.results.details.tab.close.right=Alle Tabs rechts von {0} schließen
 search.results.details.tab.close.all=Alle Tabs schließen
 search.results.details.tab.close.other=Alle anderen Tabs schließen
 contextmenu.issue.openindetails=Ticket Details anzeigen
+search.results.show.description=Beschreibung anzeigen
+search.results.show.fields=Felder anzeigen
+search.results.show.tags=Tags anzeigen
 
 
