Loading WorkTypes for manually entered Issue Ids

--- a/application/src/main/resources/i18n/connectors/rest-api.properties
+++ b/application/src/main/resources/i18n/connectors/rest-api.properties
@@ -10,3 +10,4 @@ connector.rest.issue.details.http.error=Error while loading details for Issue {0
 connector.rest.workitemtypes.http.error=Error while fetching WorkItem types: {0}
 connector.rest.name=YouTrack REST API
 connector.rest.workitemtypes.progress.loading=Fetching work types
+connector.rest.issue.byid=Loading Issue {0}
