--- a/application/src/main/resources/i18n/connectors/rest-api_de.properties
+++ b/application/src/main/resources/i18n/connectors/rest-api_de.properties
@@ -9,3 +9,4 @@ connector.rest.issue.search.progress.workitems=Lade Zeitbuchungen für {0} Ticke
 connector.rest.issue.details.http.error=Fehler beim Laden von Ticket {0}: {1}
 connector.rest.workitemtypes.http.error=Fehler beim Laden der Arbeitstypen: {0}
 connector.rest.workitemtypes.progress.loading=Hole Arbeitstypen
+connector.rest.issue.byid=Lade Ticket {0}
