--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -169,5 +169,6 @@ contextmenu.issue.openindetails=Ticket Details anzeigen
 search.results.show.description=Beschreibung anzeigen
 search.results.show.fields=Felder anzeigen
 search.results.show.tags=Tags anzeigen
+dialog.issue.byid.task.title=Suche Ticket {0}
 
 
