Showing Estimate vs Used Time in Details Pane on Tickets with an estimate

--- a/application/src/main/resources/i18n/connectors/rest-api.properties
+++ b/application/src/main/resources/i18n/connectors/rest-api.properties
@@ -7,7 +7,8 @@ connector.rest.issue.search.progress.query=Searching for issues with query {0}
 connector.rest.issue.search.http.error=Error while searching for issues with query {0}: {1}
 connector.rest.issue.search.progress.workitems=Loading workitems for {0} Issues
 connector.rest.issue.details.http.error=Error while loading details for Issue {0}: {1}
-connector.rest.workitemtypes.http.error=Error while fetching WorkItem types: {0}
+connector.rest.timetrackingsettings.http.error=Error while fetching WorkItem types: {0}
 connector.rest.name=YouTrack REST API
 connector.rest.workitemtypes.progress.loading=Fetching work types
 connector.rest.issue.byid=Loading Issue {0}
+connector.rest.timetrackingsettings.http.loading=Loading time tracking settings for project {0}
