--- a/application/src/main/resources/i18n/connectors/rest-api_de.properties
+++ b/application/src/main/resources/i18n/connectors/rest-api_de.properties
@@ -7,6 +7,7 @@ connector.rest.issue.search.progress.query=Suche nach Tickets mit Query {0}
 connector.rest.issue.search.http.error=Fehler bei der Suche nach Tickets mit Query {0}: {1}
 connector.rest.issue.search.progress.workitems=Lade Zeitbuchungen für {0} Tickets
 connector.rest.issue.details.http.error=Fehler beim Laden von Ticket {0}: {1}
-connector.rest.workitemtypes.http.error=Fehler beim Laden der Arbeitstypen: {0}
+connector.rest.timetrackingsettings.http.error=Fehler beim Laden der Arbeitstypen: {0}
 connector.rest.workitemtypes.progress.loading=Hole Arbeitstypen
 connector.rest.issue.byid=Lade Ticket {0}
+connector.rest.timetrackingsettings.http.loading=Lade TimeTracking Einstellungen für Projekt {0}
