--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -176,5 +176,6 @@ search.results.details.tab.close.left=Close all tabs left of {0}
 search.results.details.tab.close.right=Close all tabs right of {0}
 search.results.details.tab.close.all=Close all tabs
 search.results.details.tab.close.other=Close other tabs
+search.results.details.spenttime.tooltip=Estimate: {0}, Spent Time: {1}, Time left: {2}
 contextmenu.issue.openindetails=Open in details view
 dialog.issue.byid.task.title=Searching Issue {0}
