--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -170,5 +170,6 @@ search.results.show.description=Beschreibung anzeigen
 search.results.show.fields=Felder anzeigen
 search.results.show.tags=Tags anzeigen
 dialog.issue.byid.task.title=Suche Ticket {0}
+search.results.details.spenttime.tooltip=Schätzung: {0}, Gebuchte Zeit: {1}, Übrig: {2}
 
 
