Project full name as grouping criteria

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -100,7 +100,8 @@ exceptions.updater.versions=Error retrieving available versions from Github
 exceptions.excel.error=Error writing Excel file to {0}
 grouping.workauthor=Work author
 grouping.worktype=Work type
-grouping.project=Project
+grouping.project.short=Project short name
+grouping.project.full=Project name
 exceptions.notsetyet={0} is not ready yet. Please verify, that the settings dialog has been filled out correctly.
 contextmenu.issue.openinyoutrack=Show {0} in browser window
 contextmenu.issue.addworkitem=Add work item to {0}
