--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -90,7 +90,8 @@ view.logs.savefile=Log Datei speichern
 exceptions.logs.savefile=Konnte Log Datei nicht unter {0} speichern
 exceptions.updater.versions=Versionen konnten nicht aus Github geladen werden
 exceptions.excel.error=Fehler beim Schreiben der Excel Datei nach {0}
-grouping.project=Projekt
+grouping.project.short=Projekt Kürzel
+grouping.project.full=Projekt Name
 grouping.worktype=Typ der Zeitbuchung
 grouping.workauthor=Zeitbuchende Person
 timerange.custom.startrequired=Startdatum ist erforderlich
